--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/core.js"></script>
+    <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/core.js"></script> -->
+	
 </head>
 
 <body>
