--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>PortFolio </h1>
     <hr>
-    <p>Page principale du site de la production </p>
+    <p>Page principale</p>
     <ul style="display: inline-block">
         <li><a href="#">Menu1</a></li>
         <li><a href="#">Menu2</a></li>
